# zeromatch

./: .gitattributes  .gitignore  Cargo.toml  README.md  biome.json  index.d.ts  index.js  package.json
.github/: renovate.json
.github/workflows/: CI.yml
__test__/: index.spec.ts  index.test.ts
benchmark/: bench.ts
src/: ast.rs  compile.rs  ffi.rs  lib.rs  matcher.rs  options.rs  parse.rs  regex_emit.rs  scan_glob.rs  set.rs  util.rs
